--- a/apps/csci32-york/package.json
+++ b/apps/csci32-york/package.json
@@ -13,7 +13,8 @@
     "@vercel/speed-insights": "^1.0.12",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@repo/ui": "*"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -23,6 +24,8 @@
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@repo/eslint-config": "*",
+    "@repo/typescript-config": "*"
   }
 }
